# service-center-management-system

./: README.md
Service-center-system/: CMakeLists.txt  Images.qrc  database.cpp  database.h  informationwindow.cpp  informationwindow.h  informationwindow.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  orderwindow.cpp  orderwindow.h  orderwindow.ui  statisticwindow.cpp  statisticwindow.h  statisticwindow.ui  warningwindow.cpp  warningwindow.h  warningwindow.ui
